--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
     ],
 	"require": {
         "phile-cms/phile": "1.0.0",
-        "phile-cms/plugin-installer-plugin": "1.0.0",
-        "smarty/smarty": "3.1.5"
+        "phile-cms/plugin-installer-plugin": "1.0.0"
 	}
 }
